# socbench

./: .dockerignore  .gitignore  LICENSE  README.md  REPRODUCE.md  RESULTS.md  RESULTS_REPRODUCE.md  pyproject.toml
.github/workflows/: pages.yml
config/: benchmark_config.yaml  pricing.yaml  schema.json
config/prompts/: playbook_common.md  system_scaffold_explicit.txt
config/prompts/personas/: adversary_hunter.md  detection_engineer.md  soc_analyst.md  threat_analyst.md
config/prompts/playbooks/: adversary_hunter.md  detection_engineer.md  soc_analyst.md  threat_analyst.md
data/: PROVENANCE-benchmark-v0.md  test.ipynb
data/sample/: cic2018-mini.parquet
deploy/gcp/: Dockerfile  README.md  cloudbuild.yaml  cloudrun-job.sh  entrypoint.sh  job.yaml  launch.sh
deploy/vertex/: Dockerfile  cloudbuild.yaml  entrypoint.sh  launch.sh
docs/: 0002-LLMs-as-Security-Agents.md  blog-claude-web-context.md  blog-content-plan.md  design-optimizations.md  implementation-plan.md  index.html  loglm_vs_llm_scorecard.md
docs/css/: style.css
docs/js/: main.js
docs/website/: CNAME  index.html
docs/website/css/: style.css
docs/website/js/: data.js  main.js
notebooks/: quickstart.ipynb  results_explorer.ipynb
scripts/: build_from_gcs.py  build_sample_from_real.py  eval_sec8.py  loglm_vs_llm_scorecard.py  run_full_benchmark.sh
src/socbench/: __init__.py  agent.py  aggregate.py  cli.py  config.py  hashing.py  index.py  logging_config.py  models.py  prompts.py  sampling.py  schema.py  scoring.py
src/socbench/providers/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  mock_adapter.py  open_source_adapter.py  openai_adapter.py
src/socbench/tools/: __init__.py  base.py  smoke.py
src/socbench/tools/catalog/: __init__.py  _helpers.py  get_flows.py  get_pair_timeline.py  host_rollup.py  list_pairs.py  pair_stats.py  port_proto_matrix.py  rarity_stats.py  submit_assessment.py  top_destinations.py
tests/: conftest.py  synthetic_flows.py  test_agent_loop.py  test_aggregate.py  test_cli_run.py  test_config.py  test_index_build.py  test_models.py  test_prompts.py  test_providers_mock.py  test_providers_open_source.py  test_providers_openai.py  test_sampling.py  test_schema.py  test_scoring.py  test_tools.py
